language/move-lang/tests/move_check/parser/struct_type_copyable.move
module M {
    // Check misspelling of "copyable" constraint.
    struct S<T: copy> { }
}
